<resources>
    <string name="app_name">PenguinPay</string>
    <string name="send_money">Send Money</string>
    <string name="recipient_information">Recipient Information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile">Mobile</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="recipient_receives">Recipient Receives</string>
    <string name="amount_to_send">Amount To Send</string>
    <string name="send">Send Money</string>
    <string name="base_amount">1</string>
    <string name="amount">Amount</string>
    <string name="amount_payable_to_recipient">%s</string>
    <string name="uganda_shilling">USh %s</string>
    <string name="tanzania_shilling">TSh %s</string>
    <string name="kenyan_shilling">Ksh %s</string>
    <string name="nigerian_naira">₦ %s</string>
    <string name="your_money_transfer_was_successful">Your money transfer was successful</string>
    <string name="congratulations">Congratulations</string>
</resources>